# reuse-agent

./: .gitignore  Dockerfile  README.md  backend.py  docker-compose.yml  main.py  paper.md  pyproject.toml  react.py  streamlit_app.py  🏠_home.py
agents_test/: agent_iter.py  callback.py  langchain_tot_test.py  react.py  structure_agent.py
api/: openai.py
callbacks/: callback.py
config/: settings.py
core/: conversation.py  deprecated.py  example_component.py  langserve.py  react_component.py  serve.py  streamlit.py  streamlit_component.py
core/action_to_module/: agent.py  example.py  module_define.py  module_gen.py  module_store.py  output_parser.py  prompt.py
core/action_to_tool_agent/: agent.py  example.py  module_define.py  module_gen.py  prompt.py
core/interpreter/: base.py  python.py  python_tool.py  shell.py
database/: mongo.py
deprecated/: agent_bak_function_call_fail.py  base_agent.py  deprecated.py
function_call_test/: function_call_test.py
llm/: openai.py
loggers/: logs.py
open_creator_test/: open_creator_test_main.py
pages/: 1_conversation.py  1_🤖_conversation.py  2_module_list.py  2_⭐️_module_list.py  3_combine_module.py  4_module_to_app.py  5_app_list.py
poc/: cot_component.py  example_component.py  exec_multi_func_test.py  py_exec_test.py
prompts-patent/: S1-任务解决.md  S2-模块生成.md  S3-模块测试.md  S4-模块重构与合并.md
prompts-patent-templates/: S2-模块生成.md  S3-模块测试.md  S4-模块重构与合并.md  s7-标准自动化流程
src/: backend.py  example_conversation.pkl  paper.md  🏠_home.py
streamlit_component/: combine_module.py  conversation.py  module.py  module_sidebar.py  refactor_module.py
tool/: tool_custom.py
tot/: tot.py
ut/: exec_multi_func_test.py
(+89 files in other folders)
