[tool.poetry]
name = "reuse-agent"
version = "0.1.0"
description = "reuse agent"
authors = ["Bird <aflybird0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.7"
tree-of-thoughts = "^0.3.7"
numexpr = "^2.8.7"
pymongo = "^4.6.1"
fastapi = "^0.109.0"
sse-starlette = "^2.0.0"
pydantic = "1.10.13"
watchdog = "^3.0.0"
streamlit-tags = "^1.2.8"
st-annotated-text = "^4.0.1"
uvicorn = "^0.27.0"
docker = "^7.0.0"
python-multipart = "^0.0.6"
streamlit-modal = "^0.1.0"
python-dotenv = "^1.0.0"
langchain = "^0.1.4"
langchain-experimental = "^0.0.49"
streamlit = "^1.30.0"
langserve = "^0.0.41"
langchainhub = "^0.1.14"
langchain-openai = "^0.0.5"
chromadb = "^0.4.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
